# czm-face

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  core.cpp  core.hpp  main.cpp
src/czm_face/: czm_face.cpp  czm_face.hpp  czm_point.cpp  czm_point.hpp  edge.cpp  edge.hpp
src/vec3d/: vec3d.cc  vec3d.h
tests/: CMakeLists.txt  core_tests.cpp
